[package]
name = "ktest"
version = "0.1.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "A custom test framework for Rust-based operating system kernels"
license = "MIT"
repository = "https://github.com/philogroves/ktest"

[dependencies]
x86_64 = "0.15.2"
uart_16550 = "0.4.0"
conquer-once = { version = "0.4.0", default-features =  false }
spin = "0.10.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }
